k8s/store/templates/ingress/client-gateway.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
spec:
  rules:
    - http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: client-gateway
              port:
                number: 8000
